--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,13 @@
     預設:1
 
 - 顏色 
-    主色：#e67e22 、#fae5d3、#555 、#333
+    主色：#e67e22 、#fdf2e9、#555 、#333
 
 - 陰影
 
 */
 @import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
+
 * {
     padding: 0;
     margin: 0;
@@ -24,34 +25,88 @@ html {
 
 body {
     /* font-family: sans-serif; */
-    font-family: 'Noto Sans TC',sans-serif !important;
+    font-family: 'Noto Sans TC', sans-serif !important;
     line-height: 1;
     font-weight: 400;
     color: #555;
 }
 
+
+
+/*******************/
+/* 頁首 */
+/*******************/
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fdf2e9;
+    height: 9.6rem;
+    padding: 0 4.8rem;
+}
+
+.logo {
+    height: 2.2rem;
+}
+
+/*******************/
+/* navgation */
+/*******************/
+.main-nav-liset {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 3.2rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+    display: inline-block;
+    text-decoration: none;
+    color: #333;
+    font-weight: 500;
+    font-size: 1.8rem;
+    transition: all .3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+    color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+    padding: 1.2rem 2.4rem;
+    border-radius: 5px;
+    color: #fff;
+    background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+    background-color: #cf711f;
+}
+
+
+/*******************/
+/* 部分1-hero */
+/*******************/
 .section-hero {
-    background-color: #fae5d3;
-    padding: 9.6rem 0;
+    background-color: #fdf2e9;
+    padding: 4.8rem 0 9.6rem 0;
 }
 
 .hero {
     max-width: 130rem;
     margin: 0 auto;
+    padding: 0 3.2rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 9.6rem;
     align-items: center;
 }
 
-.heading-primary {
-    font-size: 5.2rem;
-    font-weight: 700;
-    line-height: 1.3;
-    color: #333;
-    letter-spacing: 5px;
-    margin-bottom: 3.2rem;
-}
+
 
 .hero-description {
     font-size: 2rem;
@@ -60,73 +115,132 @@ body {
     letter-spacing: .2rem;
 }
 
-.btn:link,
-.btn:visited {
-    display: inline-block;
-    text-decoration: none;
-    font-size: 2rem;
-    padding: 1.6rem 3.2rem;
-    border-radius: 5px;
-    transition: background-color .5s;
-    letter-spacing: .3rem;
-}
 
-.btn--full:link,
-.btn--full:visited {
-    background-color: #e67e22;
-    color: #fff;
-}
 
-.btn--full:hover,
-.btn--full:active {
-    background-color: #cf711f;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-    background-color: #fff;
-    color: #555;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-    background-color: #fae5d3;
-    box-shadow: 0 0 0 3px #fff;
-}
 
 .hero-img {
     width: 100%;
 }
 
-.margin-right-sm {
-    margin-right: 1.6rem !important;
-}
-.delivered-meals{
+
+
+.delivered-meals {
     display: flex;
     margin-top: 5rem;
     align-items: center;
     gap: 1.6rem;
 }
-.delivered-imgs{
+
+.delivered-imgs {
     display: flex;
 }
-.delivered-imgs img{
-    height:4.8rem;
+
+.delivered-imgs img {
+    height: 4.8rem;
     width: 4.8rem;
     border-radius: 50%;
     margin-right: -1rem;
-    border: 3px solid #fae5d3;
+    border: 3px solid #fdf2e9;
 }
-.delivered-imgs img:last-child{
+
+.delivered-imgs img:last-child {
     margin: 0;
 }
-.delivered-text{
+
+.delivered-text {
     font-size: 1.8rem;
     font-weight: 500;
     letter-spacing: .2rem;
     line-height: 1.2;
 }
-.delivered-text span{
+
+.delivered-text span {
     color: #e67e22;
     font-weight: 800;
+}
+
+/*******************/
+/* 部分2-featured */
+/*******************/
+.section-featured{
+    padding: 4.8rem 0 3.2rem 0; 
+}
+.heading-featured-in {
+    font-size: 1.4rem;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+    font-weight: 800;
+    text-align: center;
+    margin-bottom: 2.4rem;
+    color: #999;
+}
+.logos{
+    display: flex;
+    justify-content: space-around;
+}
+.logos img{
+    height: 3.2rem;
+    filter: brightness(0);
+    opacity: 0.5;
+}
+
+
+/*******************/
+/* 部分3-how */
+/*******************/
+.section-how {
+    padding: 9.6rem 0;
+}
+
+.step-number {
+    font-size: 9.8rem;
+    font-weight: 600;
+    color: #919191;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 1.2rem;
+}
+
+.step-description {
+    font-size: 1.6rem;
+    line-height: 1.6;
+    letter-spacing: .2rem;
+}
+
+.step-img-box {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.step-img-box::before,
+.step-img-box::after {
+    content: "";
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.step-img-box::before {
+    width: 60%;
+    /* 用padding的方式讓他可以被加到width一樣 */
+    padding-bottom: 60%;
+    background-color: #fdf2e9;
+    z-index: -2;
+}
+
+.step-img-box::after {
+    width: 45%;
+    padding-bottom: 45%;
+    background-color: #fae5d3;
+    z-index: -1;
+}
+
+.step-img {
+    width: 35%;
 }
