--- a/css/style.css
+++ b/css/style.css
@@ -244,3 +244,100 @@ body {
 .step-img {
     width: 35%;
 }
+
+/*******************/
+/* 部分4-meals */
+/*******************/
+.section-meals {
+    padding: 9.6rem 0;
+}
+.meal{
+    box-shadow: 0 2.4rem 4.8rem rgba(0,0,0,0.075);
+    border-radius: 11px;
+    overflow: hidden;
+    transition: all .3s;
+    cursor: pointer;
+}
+.meal:hover{
+    transform: translateY(-1.2rem);
+    box-shadow: 0 3.2rem 6.4rem rgba(0,0,0,0.2);
+}
+.meal-content{
+    padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+
+}
+.meal-tags{
+    margin-bottom: 1.2rem;
+    display: flex;
+    gap: .6rem;
+}
+.tag{
+    display: inline-block;
+    padding: .8rem 1.2rem;
+    font-size: 1.4rem;
+    letter-spacing: .3rem;
+    background-color:#51cf66;
+    color: #fff;
+    border-radius: 100px;
+    font-weight: 500;
+    text-align: center;
+}
+.tag--vegetarian{
+    background-color: #51cf66;
+}
+/* .tag--vagan{
+background-color: #94d82d;
+} */
+.tag--paleo{
+    background-color: #94d82d;
+}
+
+.meal-title{
+    font-size: 2.4rem;
+    color: #333;
+    font-weight: 600;
+    margin-bottom: 3.2rem;
+    letter-spacing: .3rem;
+}
+.meal-attributes{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+}
+.meal-attribute{
+    display: flex;
+    align-items: center;
+    font-size: 1.8rem;
+    letter-spacing: .2rem;
+    gap: 1.6rem;
+}
+.meal-icon{
+    height: 2.4rem;
+    width: 2.4rem;
+    color: #e67e22;
+}
+.meal-img{
+    width: 100%;
+}
+.all-recipes{
+    text-align: center;
+    font-size: 1.8rem;
+}
+.list{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+}
+.list-item{
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+}
+.list-icon{
+    width: 3rem;
+    height: 3rem;
+    color: #e67e22;
+}
