--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    letter-spacing: .2rem;
 }
 
 html {
@@ -115,7 +116,6 @@ body {
     font-size: 2rem;
     line-height: 1.6;
     margin-bottom: 4.8rem;
-    letter-spacing: .2rem;
 }
 
 
@@ -153,7 +153,6 @@ body {
 .delivered-text {
     font-size: 1.8rem;
     font-weight: 500;
-    letter-spacing: .2rem;
     line-height: 1.2;
 }
 
@@ -173,7 +172,6 @@ body {
     font-size: 1.4rem;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-transform: uppercase;
-    letter-spacing: .2rem;
     font-weight: 800;
     text-align: center;
     margin-bottom: 2.4rem;
@@ -210,7 +208,6 @@ body {
 .step-description {
     font-size: 1.6rem;
     line-height: 1.6;
-    letter-spacing: .2rem;
 }
 
 .step-img-box {
@@ -324,7 +321,6 @@ background-color: #94d82d;
     display: flex;
     align-items: center;
     font-size: 1.8rem;
-    letter-spacing: .2rem;
     gap: 1.6rem;
 }
 
@@ -343,25 +339,6 @@ background-color: #94d82d;
     font-size: 1.8rem;
 }
 
-.list {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    gap: 1.6rem;
-}
-
-.list-item {
-    font-size: 1.8rem;
-    display: flex;
-    align-items: center;
-    gap: 1.6rem;
-}
-
-.list-icon {
-    width: 3rem;
-    height: 3rem;
-    color: #e67e22;
-}
 
 
 /* **************** */
@@ -397,7 +374,6 @@ background-color: #94d82d;
     font-size: 1.8rem;
     line-height: 1.8;
     margin-bottom: 1.6rem;
-    letter-spacing: .2rem;
 }
 
 .testimonial-name {
@@ -411,14 +387,126 @@ background-color: #94d82d;
     gap: 1.6rem;
     padding: 1.6rem;
 }
-.gallery-item{
+
+.gallery-item {
     overflow: hidden;
 }
+
 .gallery-item img {
     display: block;
     width: 100%;
     transition: all .5s;
 }
-.gallery-item img:hover{
+
+.gallery-item img:hover {
     transform: scale(1.1);
+}
+
+
+/* **************** */
+/* section-pricing*/
+/* **************** */
+.section-pricing {
+    padding: 9.6rem 0;
+}
+
+.princing-plan {
+    /* background-color: #fdf2e9; */
+    border-radius: 11px;
+    padding: 4.6rem;
+    width: 75%;
+}
+
+.princing-plan--complete {
+    padding: 4.8rem;
+    background-color: #fdf2e9;
+    position: relative;
+    overflow: hidden;
+}
+
+.princing-plan--complete::after {
+    content: "最佳方案";
+    position: absolute;
+    top: 5%;
+    right: -9%;
+
+    background-color: #ffd43b;
+    font-size: 1.4rem;
+    color: #444;
+    font-weight: 700;
+    padding: .8rem 4.6rem;
+    transform: rotate(45deg);
+}
+
+.princing-plan--starter {
+    justify-self: end;
+    border: 3px solid #fdf2e9;
+}
+
+.plan-header {
+    text-align: center;
+    margin-bottom: 4.8rem;
+}
+
+.plan-name {
+    color: #cf711f;
+    font-weight: 600;
+    font-size: 2rem;
+    letter-spacing: .3rem;
+    margin-bottom: 3.2rem;
+}
+
+.plan-price {
+    font-size: 6.2rem;
+    font-weight: 600;
+    color: #333;
+    letter-spacing: .3rem;
+    margin-bottom: 1.6rem;
+}
+
+.plan-price span {
+    font-size: 3rem;
+    font-weight: 400;
+    margin-right: .8rem;
+}
+
+.plan-text {
+    font-size: 1.4rem;
+    line-height: 1.6;
+    letter-spacing: .3rem;
+    color: #6f6f6f;
+}
+
+.plan-sing-up {
+    text-align: center;
+    margin-top: 4.8rem;
+}
+
+.plan-details {
+    font-size: 1.6rem;
+    line-height: 1.6;
+    text-align: center;
+}
+
+.feature-icon {
+    color: #e67e22;
+    height: 3.2rem;
+    width: 3.2rem;
+    margin-bottom: 3.2rem;
+    /* border: 2px solid #e67e22; */
+    background-color: #fae5d3;
+    padding: 1.6rem;
+    border-radius: 50%;
+}
+
+.feature-title {
+    font-size: 2.4rem;
+    color: #333;
+    font-weight: 700;
+    margin-bottom: 1.6rem;
+}
+
+.feature-text {
+    line-height: 1.8;
+    font-style: 1.8rem;
 }
