--- a/css/general.css
+++ b/css/general.css
@@ -34,6 +34,10 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
+.grid--5-color {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
 .heading-primary,
 .heading-secondary,
 .heading-tertiary {
@@ -69,16 +73,21 @@
     margin-bottom: 1.4rem;
 }
 
-
+.btn,
 .btn:link,
 .btn:visited {
     display: inline-block;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 1.4rem;
     padding: 1.6rem 3.2rem;
     border-radius: 5px;
     transition: all .5s;
     letter-spacing: .3rem;
+
+    /* 僅限btn */
+    border: none;
+    cursor: pointer;
+    font-family: inherit;
 }
 
 .btn--full:link,
@@ -102,6 +111,18 @@
 .btn--outline:active {
     background-color: #fdf2e9;
     box-shadow: 0 0 0 3px #fff;
+}
+
+.btn--form {
+    background-color: #45260a;
+    color: #fdf2e9;
+    align-self: end;
+    padding: 1rem;
+}
+
+.btn--form:hover {
+    background-color: #fff;
+    color: #555;
 }
 
 .link:link,
@@ -157,7 +178,6 @@
     height: 3rem;
     color: #e67e22;
 }
-
 
 strong {
     font-weight: 750;
