--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ body {
     text-decoration: none;
     color: #333;
     font-weight: 500;
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     transition: all .3s;
     letter-spacing: .3rem;
 }
@@ -509,4 +509,88 @@ background-color: #94d82d;
 .feature-text {
     line-height: 1.8;
     font-style: 1.8rem;
+}
+
+/* **************** */
+/* CTA */
+/* **************** */
+.section-cta {
+    padding: 9.6rem 0;
+}
+
+.cta {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    /* background-color: #e67e22; */
+    box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.015);
+    border-radius: 11px;
+    background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
+    height: 50rem;
+    overflow: hidden;
+}
+
+.cta-text-box {
+    padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+    color: #45260a;
+}
+
+.cta .heading-secondary {
+    color: inherit;
+    margin-bottom: 3.2rem;
+}
+
+.cta-text {
+    font-size: 1.8rem;
+    line-height: 1.8;
+    margin-bottom: 4.8rem;
+}
+
+.cta-img-box {
+    background-image: linear-gradient(to right bottom, rgba(235, 150, 76, 0.3), rgba(230, 125, 33, 0.3)), url('../img/eating.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+.cta-form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 3.2rem;
+    row-gap: 2.4rem;
+}
+
+.cta-form label {
+    display: block;
+    font-size: 1.6rem;
+    font-weight: 500;
+    margin-bottom: 1.2rem;
+}
+
+.cta-form input,.cta-form select {
+    width: 100%;
+    padding: 1rem;
+    padding-left: 1.6rem;
+    font-size: 1.2rem;
+    font-family: inherit;
+    color: inherit;
+    border: none;
+    background-color: #fdf2e9;
+    border-radius: 5px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.cta-form input::placeholder {
+    color: #aaa;
+}
+.cta *:focus{
+    outline: none;
+    /* outline: 4px dotted #e67e22;
+    outline-offset: 2px; */
+    box-shadow: 0 0 0 0.8rem hsla(27, 83%, 95%, 0.5);
+}
+
+/* **************** */
+/* Footer */
+/* **************** */
+.footer{
+    padding: 9.6rem 0;
 }
