--- a/css/general.css
+++ b/css/general.css
@@ -22,19 +22,19 @@
     align-items: center;
 }
 
-.grid--2-color {
+.grid--2-cols {
     grid-template-columns: 1fr 1fr;
 }
 
-.grid--3-color {
+.grid--3-cols {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-.grid--4-color {
+.grid--4-cols {
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.grid--5-color {
+.grid--5-cols {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
@@ -171,6 +171,7 @@
     align-items: center;
     gap: 1.6rem;
     letter-spacing: .3rem;
+    line-height: 1.2;
 }
 
 .list-icon {
